fix(console): unexpected spacing under item-preview icon

--- a/packages/console/src/pages/ApiResources/index.module.scss
+++ b/packages/console/src/pages/ApiResources/index.module.scss
@@ -14,6 +14,10 @@
   flex: 1;
 }
 
+.icon {
+  @include _.image-block;
+}
+
 .pagination {
   margin-top: _.unit(4);
   min-height: 32px;
