--- a/packages/console/src/pages/Connectors/components/ConnectorName/index.module.scss
+++ b/packages/console/src/pages/Connectors/components/ConnectorName/index.module.scss
@@ -9,6 +9,7 @@ a.link {
   width: 40px;
   height: 40px;
   border-radius: 5px;
+  @include _.image-block;
 }
 
 .previewTitle {
